--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Maths Website</title>
+<title>Maths Website By Faisal</title>
 <meta name="viewport" content="width:device-width initial-scale=1.0 user-scalable=yes">
 <link rel="stylesheet" href="styling.css">
 	</head>
